# siem_lite_project

./: .env  .gitignore  .http_script.txt.kate-swp  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  http_script.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/: client.py  config.py  main.py
alerts/: admin.py  engine.py  models.py  serializers.py  urls.py  views.py
alerts/migrations/: 0001_initial.py  0002_alter_alert_options_and_more.py  0003_alter_alert_options_alert_occurrence_count_and_more.py
config/: settings.py  urls.py
core/: models.py
dashboard/: urls.py  views.py
dashboard/static/dashboard/css/: dashboard.css  dashboard.css.map
dashboard/static/dashboard/scss/: dashboard.scss
dashboard/templates/dashboard/: index.html
logs/: admin.py  models.py  serializers.py  urls.py  views.py
logs/migrations/: 0001_initial.py
machines/: admin.py  auth.py  models.py  serializers.py  urls.py  views.py
machines/migrations/: 0001_initial.py
rules/: admin.py  engine.py  models.py  serializers.py  urls.py  views.py
rules/migrations/: 0001_initial.py
tests/: conftest.py  test_ingestion_and_rules.py  test_machine_auth.py
